# 2D-heat-diffusion

./: CMakeLists.txt  README.md  case_1.json  case_2.json  case_3.json  case_4.json  diffusion.h  input.h  main.cpp  nag_key.txt  optimizer.h  solve.h  visualize.h
Presentation/: Group02_SiSc_lab.pptx
rapidjson/: reader.h  writer.h
rapidjson/internal/: clzll.h  diyfp.h
tests/Matrix/: test_solve.cpp
